--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header {
 .logo {
     color: #ff7200;
     font-weight: 700;
-    font-size: 25px;
+    font-size: 5vw;
 }
 .logo span {
     color: #1f22d2;
