--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ header {
 
 /* about us CSS */
 
-#about_us {
+#about_us, #about_us1 {
     display: flex;
     align-items: center;
     height: calc(100vh - 50px);
@@ -274,27 +274,27 @@ header {
 }
 
 
-.about, .formulaires {
+.about,.about1 .formulaires {
     display: flex;
     align-items: center;
     width: 100%;
     justify-content: space-between;
     height: 70vh;
 }
-.about .left {
+.about .left, .about1 .left {
      width: 40%;
      display: flex;
      align-items: center;
      justify-content: center;
      height: 100vh;
 }
-.about .left img {
+.about .left img, .about1 .left img{
     width: 90%;
 }
-.about .right {
+.about .right, .about1 .right {
     width: 60%;
 }
-.about .right h3 {
+.about .right h3, .about1 .right h3 {
     font-size:25px;
     color: #0b0b0b;
     margin-bottom: 35px;
