--- a/style.css
+++ b/style.css
@@ -264,7 +264,16 @@ header {
 
 /* about us CSS */
 
-#about_us, #about_us1 {
+#about_us {
+    display: flex;
+    align-items: center;
+    height: calc(100vh - 50px);
+    flex-direction: column;
+    padding: 50px 10%;
+    width: 100%;
+}
+
+#about_us1 {
     display: flex;
     align-items: center;
     height: calc(100vh - 50px);
@@ -274,32 +283,59 @@ header {
 }
 
 
-.about,.about1 .formulaires {
+.about, .formulaires {
     display: flex;
     align-items: center;
     width: 100%;
     justify-content: space-between;
     height: 70vh;
 }
-.about .left, .about1 .left {
+.about1 {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+    height: 70vh;
+}
+.about .left {
      width: 40%;
      display: flex;
      align-items: center;
      justify-content: center;
      height: 100vh;
 }
+.about1 .left {
+     width: 40%;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     height: 100vh;
+}
+
 .about .left img, .about1 .left img{
     width: 90%;
 }
 .about .right, .about1 .right {
     width: 60%;
 }
-.about .right h3, .about1 .right h3 {
+.about .right h3 {
     font-size:25px;
     color: #0b0b0b;
     margin-bottom: 35px;
 }
+.about1 .right h3 {
+    font-size:25px;
+    color: #0b0b0b;
+    margin-bottom: 35px;
+}
+
 .about .right p {
+    font-size: 14px ;
+    color: #999;
+    text-align: justify;
+}
+
+.about1 .right p {
     font-size: 14px ;
     color: #999;
     text-align: justify;
@@ -608,24 +644,24 @@ hr {
         width: 100%;
         max-width: 260px;
     }
-    #about_us {
+    #about_us, about_us1 {
         padding: 10px ;
         height: auto;
     }
-    #about_us .about {
+    #about_us .about, about_us1 .about1  {
         flex-direction: column;
        height: fit-content;
     }
-    #about_us .left , #about_us .right {
+    #about_us .left , #about_us1 .left, #about_us .right, #about_us1 .right {
         width: 100%;
     }
-    #about_us .left {
+    #about_us .left, #about_us1 .right {
         height: fit-content;
     }
-    #about_us .left img {
+    #about_us .left img, #about_us1 .left img {
         width: 50%;
     }
-    #about_us .right {
+    #about_us .right, #about_us1 .right {
         text-align: center;
         padding: 20px;
     }
