--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ header {
     text-transform: capitalize;
     
 }
-.title {
+.title1 {
     font-size: 13x;
     text-transform: uppercase;
     color: #0b0b0b;
