--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ header {
     left: 1.5rem;
     width: 200px;
     height: 200px;
-    border-radius: 75%;
+    border-radius: 95%;
     overflow: hidden;
     padding: 10px 30px 20px 5px;
     display: flex;
@@ -100,7 +100,7 @@ header {
     margin-right: 10%;
     height: calc(100vh - 50px);
     justify-content: space-between;
-    margin: 150px 300px 100 150px ;
+    margin: 100px 300px 50px 100px ;
 }
 #home .left {
     width: 40%;
@@ -111,7 +111,7 @@ header {
     
 }
 #home .left h3 {
-    font-size: 40px;
+    font-size: 30px;
     color: #ff7200;
     margin-bottom: 30px;
 
